[gd_scene load_steps=13 format=3 uid="uid://b5uumeqo1cl7"]

[ext_resource type="Script" uid="uid://c12dke4n0rufk" path="res://game/menus/versus/VersusModeSelect.gd" id="1"]
[ext_resource type="Script" uid="uid://cyya0oolm3yee" path="res://game/menus/mainmenu/LPSpin.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://d3jnh37mq4dor" path="res://game/assets/sprites/UI/MainMenus/AruDJ/Timeline 1_0000.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bvgnj3khkmjjr" path="res://game/assets/sprites/UI/MainMenus/AruDJ/Timeline 1_0002.png" id="5"]
[ext_resource type="FontFile" uid="uid://d28sv0htum78d" path="res://game/assets/monogram_extended.ttf" id="6"]
[ext_resource type="Texture2D" uid="uid://b6ow73udpctn1" path="res://game/assets/sprites/UI/MainMenus/AruDJ/Timeline 1_0001.png" id="7"]
[ext_resource type="Material" uid="uid://cffvtcw31hg4s" path="res://game/assets/shaders/EarthBoundV2.tres" id="10"]
[ext_resource type="Texture2D" uid="uid://dnrbymofxcin4" path="res://game/assets/sprites/UI/MainMenus/WIM.png" id="11"]
[ext_resource type="Texture2D" uid="uid://0xw5lcnwgjfc" path="res://game/assets/sprites/BGArt/Earthbound2.png" id="13"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("6")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Animation" id="2"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AruDJ2:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.068, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("4"), ExtResource("7"), ExtResource("5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oeg27"]
_data = {
&"Idle": SubResource("2")
}

[node name="VersusModeSelect" type="Node2D"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -495.0
offset_top = 19.0
offset_right = -24.0
offset_bottom = 149.0
scale = Vector2(2, 2)
theme_override_fonts/font = SubResource("1")
text = "Versus Modes"

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
offset_left = 287.0
offset_top = 190.0
offset_right = 651.0
offset_bottom = 266.0
scale = Vector2(3.97283, 5.72218)
columns = 2

[node name="PVP" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_mask = 0
text = "2 Player"

[node name="HostLabel" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VersusCPU" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
button_mask = 0
text = "Versus CPU"

[node name="HostLabel2" type="Label" parent="CanvasLayer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EarthboundGod" type="Sprite2D" parent="."]
self_modulate = Color(0.0196078, 0.247059, 0.34902, 1)
material = ExtResource("10")
position = Vector2(961, 539)
texture = ExtResource("13")

[node name="LP" type="Sprite2D" parent="."]
position = Vector2(185, 817)
texture = ExtResource("11")
script = ExtResource("2")

[node name="AruDJ2" type="Sprite2D" parent="."]
position = Vector2(258, 911)
texture = ExtResource("5")

[node name="AruDJAnimator" type="AnimationPlayer" parent="."]
root_node = NodePath("../AruDJ2")
libraries = {
&"": SubResource("AnimationLibrary_oeg27")
}

[connection signal="pressed" from="CanvasLayer/GridContainer/PVP" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/VersusCPU" to="." method="_on_versus_cpu_pressed"]
